Add ruff tool to build container

--- a/admin/tools/docker/base/Dockerfile
+++ b/admin/tools/docker/base/Dockerfile
@@ -176,6 +176,7 @@ RUN uv pip install --system\
     numpy \
     pybind11[global] \
     pyyaml \
+    ruff \
     sqlalchemy \
     sqlalchemy-stubs \
     types-PyYAML \
