--- a/src/protojson/CMakeLists.txt
+++ b/src/protojson/CMakeLists.txt
@@ -1,8 +1,10 @@
 add_library(protojson SHARED)
 
 target_sources(protojson PRIVATE
+    JobReadyMsg.cc
 	ScanTableInfo.cc
     UberJobMsg.cc
+    WorkerCzarComIssue.cc
     WorkerQueryStatusData.cc
 )
 
@@ -35,6 +37,7 @@ function(PROTOJSON_TESTS)
 endfunction()
 
 protojson_tests(
+    testJobReadyMsg
     testStatusData
     testUberJobMsg
 )
