--- a/src/wdb/CMakeLists.txt
+++ b/src/wdb/CMakeLists.txt
@@ -7,13 +7,13 @@ target_sources(wdb PRIVATE
     SQLBackend.cc
 )
 
-target_include_directories(wdb PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
 
 target_link_libraries(wdb PUBLIC
     log
-    XrdSsiLib
+)
+
+install(
+	TARGETS wdb
 )
 
 install(
@@ -23,9 +23,6 @@ install(
 FUNCTION(wdb_tests)
     FOREACH(TEST IN ITEMS ${ARGV})
         add_executable(${TEST} ${TEST}.cc)
-        target_include_directories(${TEST} PRIVATE
-            ${XROOTD_INCLUDE_DIRS}
-        )
         target_link_libraries(${TEST} PUBLIC
             crypto
             xrdsvc
