--- a/src/cconfig/CMakeLists.txt
+++ b/src/cconfig/CMakeLists.txt
@@ -4,13 +4,13 @@ target_sources(cconfig PRIVATE
     CzarConfig.cc
 )
 
-target_include_directories(cconfig PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
 
 target_link_libraries(cconfig PUBLIC
     log
-    XrdSsiLib
+)
+
+install(
+	TARGETS cconfig
 )
 
 install(
