--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -10,15 +10,10 @@ target_sources(qdisp PRIVATE
     UberJob.cc
 )
 
-target_include_directories(qdisp PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
 
 target_link_libraries(qdisp PUBLIC
     cconfig
     log
-    http
-    XrdSsiLib
 )
 
 install(
@@ -27,14 +22,11 @@ install(
 
 add_executable(testQDisp testQDisp.cc)
 
-target_include_directories(testQDisp PRIVATE
-    ${XROOTD_INCLUDE_DIRS}
-)
-
 target_link_libraries(testQDisp
     cconfig
     ccontrol
     czar
+    mysql
     parser
     qana
     qdisp
