--- a/src/rproc/CMakeLists.txt
+++ b/src/rproc/CMakeLists.txt
@@ -11,8 +11,9 @@ target_link_libraries(rproc PUBLIC
     log
 )
 
-install(TARGETS rproc
-    EXPORT qserv
+
+install(
+    TARGETS rproc
 )
 
 install(DIRECTORY python/ DESTINATION ${CMAKE_INSTALL_PREFIX}/python/lsst/qserv/rproc)
