--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -23,8 +23,7 @@ target_link_libraries(replica PUBLIC
     replica_util
     replica_worker
     css
-    xrdreq
-    xrdsvc
+    global
     XrdCl
     XrdSsiLib
     http
@@ -123,3 +122,6 @@ add_subdirectory(requests)
 add_subdirectory(services)
 add_subdirectory(util)
 add_subdirectory(worker)
+
+# set_tests_properties(testIngestRequestMgr PROPERTIES WILL_FAIL 1)
+
