--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,15 +11,17 @@ extend-exclude = [
     "extern/*",
     "doc/conf.py",
 ]
+output-format = "concise"
 
 [tool.ruff.lint]
 select = [
+    "B",    # flake8-bugbear
     "E",    # pycodestyle
     "F",    # pyflakes
     "N",    # pep8-naming
-    "W",    # pycodestyle
-    "UP",   # pyupgrade
     "RUF",  # Ruff-specific
+    "UP",   # pyupgrade
+    "W",    # pycodestyle
 ]
 ignore = [
 ]
