Reinforced query processor to prevent possible race conditions
Eliminated useless diagnostic printouts.
Added a tool for testing XROOTD/SSI.

--- a/src/replica/apps/CMakeLists.txt
+++ b/src/replica/apps/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(replica_apps OBJECT)
 add_dependencies(replica_apps replica_proto)
+target_include_directories(replica_apps PRIVATE
+    ${XROOTD_INCLUDE_DIRS}
+)
 target_sources(replica_apps PRIVATE
     AbortTransactionApp.cc
     AdminApp.cc
@@ -33,6 +36,7 @@ target_sources(replica_apps PRIVATE
     QhttpTestApp.cc
     QservWorkerApp.cc
     QservWorkerPingApp.cc
+    QservXrootdSsiApp.cc
     RebalanceApp.cc
     RegistryHttpApp.cc
     ReplicateApp.cc
@@ -44,4 +48,5 @@ target_sources(replica_apps PRIVATE
 )
 target_link_libraries(replica_apps PUBLIC
     log
+    XrdSsiLib
 )
