Standalone tool for translating Parquet files into CSV

--- a/src/partition/CMakeLists.txt
+++ b/src/partition/CMakeLists.txt
@@ -48,6 +48,7 @@ partition_apps(
     sph-estimate-stats
     sph-htm-index
     sph-layout
+    sph-parq2csv
     sph-partition-matches
     sph-partition
 )
