--- a/src/proxy/CMakeLists.txt
+++ b/src/proxy/CMakeLists.txt
@@ -29,5 +29,5 @@ target_link_libraries(czarProxy PRIVATE
     qmeta
     xrdreq)
 
-install(TARGETS czarProxy DESTINATION ${CMAKE_INSTALL_PREFIX}/lua/qserv/lib)
-install(FILES mysqlProxy.lua DESTINATION ${CMAKE_INSTALL_PREFIX}/lua/qserv/scripts)
+install(TARGETS czarProxy DESTINATION lua/qserv/lib)
+install(FILES mysqlProxy.lua DESTINATION lua/qserv/scripts)
